# OpenSec

./: .dockerignore  .gitignore  .scanner-versions  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  opencode.json
backend/: pyproject.toml
backend/opensec/: __init__.py  config.py  main.py  models.py
backend/opensec/agents/: __init__.py  errors.py  executor.py  output_parser.py  pipeline.py  registry.py  schemas.py  sidebar_mapper.py  template_engine.py
backend/opensec/api/: _background.py  _engine_dep.py  tasks.py
backend/opensec/assessment/: __init__.py  _fs.py  _test_seam.py  clone.py  engine.py  ghsa_client.py  osv_client.py  production_engine.py  to_findings.py
backend/opensec/db/: __init__.py  connection.py  migrations.py  repo_agent_run.py  repo_audit.py  repo_credential.py  repo_finding.py  repo_ingest_job.py  repo_integration.py  (+4 more)
backend/tests/: conftest.py  test_agent_template_engine.py  test_audit.py  test_config.py  test_config_manager.py  test_connection_tester.py  test_context_builder.py  test_db.py  test_demo_seed.py  test_docker.py  test_engine_client.py  test_engine_process.py  test_executor.py  test_first_run.py  test_gateway.py  test_ingest_job.py  test_integration_health.py  test_issue_derivation.py  test_mcp_gateway_integration.py  test_migration_009.py  test_migrations.py  test_models.py  test_normalizer.py  test_output_parser.py  test_permission_client.py  test_pipeline.py  test_process_pool.py  test_registry.py  test_repo_action_templates.py  test_repo_finding_plain_description.py  test_repo_setting.py  test_repo_workspace_runner.py  test_repo_workspace_spawner.py  test_routes_agent_execution.py  test_routes_agent_runs.py  test_routes_chat.py  test_routes_findings.py  test_routes_health.py  test_routes_messages.py  test_routes_repo_settings.py  (+15 more)
cli/: pyproject.toml
cli/opensec_cli/: __init__.py  __main__.py  cli.py  client.py  output.py
cli/tests/: test_cli.py
(+474 files in other folders)
