[project]
name = "opensec"
version = "0.1.0"
description = "OpenSec - Self-hosted cybersecurity remediation copilot"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "cryptography>=44.0.0",
    "keyring>=25.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"opensec/api/routes/*.py" = ["B008"]  # FastAPI Depends() in default args is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring OpenCode binary and LLM API key",
    "agent: agent integration tests requiring real LLM calls (slow, costs money)",
]
