[project]
name = "opensec-cli"
version = "0.1.1"
description = "Agent-friendly CLI for OpenSec — drive the full remediation loop from Claude Code or any agent."
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.9.0",
]

[project.scripts]
opensec = "opensec_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opensec_cli*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
